# FLAME

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  abstract.html  annotated.html  apiusage.html  base_8cpp_source.html  base_8h_source.html  chg__stripper_8cpp_source.html  chg__stripper_8h_source.html  class_config-members.html  class_config.html  class_g_l_p_s_parser-members.html  class_g_l_p_s_parser.html  class_h5_loader-members.html  class_h5_loader.html  classes.html  classvalue__proxy__iterator-members.html  classvalue__proxy__iterator.html  cli_8cpp_source.html  config_8cpp_source.html  config_8h_source.html  constants_8h_source.html  devnotes.html  dir_0fb5573b399577b7b12557b347b7d49f.html  dir_0fb5573b399577b7b12557b347b7d49f_dep.map  dir_0fb5573b399577b7b12557b347b7d49f_dep.md5  dir_183224a034e51c970d6d13df0dbca817.html  dir_183224a034e51c970d6d13df0dbca817_dep.map  dir_183224a034e51c970d6d13df0dbca817_dep.md5  dir_257eea1193ab6620f9c5711f6014dbb3.html  dir_257eea1193ab6620f9c5711f6014dbb3_dep.map  dir_257eea1193ab6620f9c5711f6014dbb3_dep.md5  dir_4e4861454a6b10e8ceb9353116e89b01.html  dir_4e4861454a6b10e8ceb9353116e89b01_dep.map  dir_4e4861454a6b10e8ceb9353116e89b01_dep.md5  dir_827d48cb9f2f0c6c9496a57f71448f44.html  dir_827d48cb9f2f0c6c9496a57f71448f44_dep.map  (+141 more)
debian/: changelog  control  copyright  flame-data.install  flame-dev.install  flame-dev.lintian-overrides  flame.install  flame.lintian-overrides  libflame.lintian-overrides  python-flame.install  python-flame.lintian-overrides  rules
documentation/: Doxyfile.in  commit-gh.sh  elements-states.dia  elements.dia  extra.css  mainpage.h
examples/: CMakeLists.txt  LS1FS1_lattice.lat  customsim.cpp  data  example_linear.cpp  flame_demo.ipynb  sim.cpp  sim.py
gnuplot/: cavity.plt  transit_times.plt
python/: .gitignore
python/flame/: CMakeLists.txt  __init__.py  __main__.py  ioc.py  modconfig.cpp  modmachine.cpp  modmain.cpp  modstate.cpp  pyflame.h
python/flame/data/: bpm.template  common.template  core.db  drift.template  edipole.template  equad.template  marker.template  orbit.db  orbtrim.template  quadrupole.template  rfcavity.template  sbend.template  sextupole.template  solenoid.template  source.template  st.cmd
python/flame/test/: ALL_lattice.lat  ALL_latticeE.lat  Arc_Ds.lat  FE_latticeE.lat  FrontEnd.lat  LS1.lat  LS1FS1_latticeE.lat  LS1_Gen.lat  LS1_Gen2.lat  LS2_Gen.lat  LS2_Gen2.lat  TMtest.lat  Test7GapCav.lat  jb.py  jb_chg_str.py  jb_example.py  latticeout_IMP_All.lat  latticeout_IMP_withPV_consolidate2.lat  parse1.lat  test_beam_dynamics.py  test_config.py  test_h5.lat  test_jb.py  test_linear.py  test_moment.py  test_stripper.lat  to_chg_str_err.lat  to_strl.lat  to_strl_err.lat
python/flame/test/data/: axisData_29.txt  axisData_53.txt  axisData_5cell.txt  curve_sample.lat  thinlenlon_29.lat  thinlenlon_29_p.lat  thinlenlon_41.lat  thinlenlon_41_p.lat  thinlenlon_53.lat  thinlenlon_53_p.lat  thinlenlon_7g.lat  thinlenlon_85.lat  thinlenlon_85_p.lat
python/flame/test/data/Multipole29/: CaviMlp_29.txt  thinlenlon_29.txt
python/flame/test/data/Multipole41/: thinlenlon_41.txt
python/flame/test/data/Multipole53/: CaviMlp_53.txt  thinlenlon_53.txt
python/flame/test/data/Multipole85/: thinlenlon_85.txt
python/flame/test/data/cavi29test/: CaviMlp.txt  axisData.txt  thinlenlon.txt
python/flame/test/data/cavi41test/: CaviMlp.txt  axisData.txt  thinlenlon.txt
python/flame/test/data/cavi53test/: CaviMlp.txt  axisData.txt  thinlenlon.txt
python/flame/test/data/cavi85test/: CaviMlp.txt  axisData.txt  thinlenlon.txt
python/uscsi/: CMakeLists.txt  __init__.py  ioc.py  modconfig.cpp  modmachine.cpp  modmain.cpp  modstate.cpp  pyscsi.h
python/uscsi/data/: bpm.template  common.template  core.db  orbit.db  rfcavity.template  sbend.template  solenoid.template  source.template  st.cmd
python/uscsi/test/: FrontEnd.lat  LS1.lat  jb.py  jb_chg_str.py  jb_example.py  latticeout_IMP_withPV.lat  latticeout_IMP_withPV_consolidate.lat  latticeout_IMP_withPV_consolidate2.lat  moment_jb.lat  moment_jb_2.lat  test.h5  test_config.py  test_jb.py  test_linear.py  test_moment.py  to_chg_str_err.lat  to_strl.lat  to_strl_err.lat
python/uscsi/test/data/: axisData_41.txt  axisData_85.txt
python/uscsi/test/data/Multipole41/: CaviMlp_41.txt
python/uscsi/test/data/Multipole85/: CaviMlp_85.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+27 more)
sphinx_doc/: Makefile  (+5 more)
src/: #linear.cpp#  CMakeLists.txt  base.cpp  cav_ttf.cpp  chg_stripper.cpp  config.cpp  glps.l  glps.y  glps_ops.cpp  glps_parser.cpp  glps_parser.h  h5loader.cpp  h5loadertest.cpp  h5writer.cpp  linear.cpp  main.cpp  moment.cpp  moment2.cpp  moment2_sup.cpp  moment_sup.cpp  recurse-test.sh  rf_cavity.cpp  test.lat  test_config.cpp  test_jb.cpp  test_jb_1.cpp  test_jb_2.cpp  test_lex.cpp  test_parse.cpp  test_util.cpp  util.cpp
src/data/: README  bad1.lat  bad2.lat  bad3.lat  test.lat  tracy_1.lat  tracy_1_out.lat  tracy_2.lat  tracy_2_out.lat
src/flame/: base.h  chg_stripper.h  config.h  constants.h  h5loader.h  h5writer.h  linear.h  moment.h  moment_sup.h  rf_cavity.h  util.h
src/flame/state/: matrix.h  vector.h
src/scsi/: base.h  cav_ttf.h  chg_stripper.h  config.h  h5loader.h  linear.h  moment.h  moment2.h  moment2_sup.h  rf_cavity.h  util.h
src/scsi/state/: matrix.h  vector.h
tools/: CMakeLists.txt  cli.cpp  h5loadcav.py  h5plotsim.py  jb_plot.py  linear1.lat  linear2.lat  tlm2h5.py
vaccel/: CMakeLists.txt  flame.cpp  flame.h  flameSupport.dbd  flamedev.cpp  flameelem.cpp  flamemeasure.cpp  flameorbit.cpp  flameset.cpp  iocshelper.h
(+57 files in other folders)
